Changement de l'algorithme de création de grille -> plus de crash; changement de la méthode de vérification de cohérence de la grille -> à revoir pour les appels après chaque insertion par le joueur

--- a/design.css
+++ b/design.css
@@ -3,6 +3,10 @@ body {
 	font-family: Ubuntu;
 }
 
+input {
+	border:none;
+}
+
 #grid , #commands{
 	border-collapse: collapse;
 	margin: auto;
@@ -15,7 +19,7 @@ body {
 	border: 1px solid black;
 }
 
-#commands {
+#commands, #gameInfos {
 	background-color: white;
 }
 
@@ -45,9 +49,13 @@ body {
 	display: inline-block;
 }
 
+.center {
+	top: -244px;
+}
+
 .number, .cell {
 	text-align: center;
-  width: 42px;
+	width: 42px;
 }
 
 .number {
