--- a/design.css
+++ b/design.css
@@ -71,11 +71,13 @@ footer {
 
 #grid {
     position: absolute;
-    height: 100%
+    height: 100%;
+    width: 100%;
 }
 
 #grid td {
-	width: 42px;
+	width: 11.11%;
+	height: 11.11%;
 	border: 1px solid black;
 }
 
