--- a/design.css
+++ b/design.css
@@ -37,7 +37,7 @@ input {
 	-moz-box-shadow: 0px 0px 2px rgba(0,0,0,0.3);
 	border: none;
 	min-width: 90px;
-	margin: 0px 5px;
+	margin: 0px 0.75%;
 	padding: 5px;
 }
 
