--- a/design.css
+++ b/design.css
@@ -18,6 +18,24 @@
 
 */
 
+/* ------- ESSAI -------- */
+@-webkit-viewport{
+    width: device-width;
+}
+@-moz-viewport{
+    width: device-width;
+}
+@-ms-viewport{
+    width: device-width;
+}
+@-o-viewport{
+    width: device-width;
+}
+@viewport{
+    width: device-width;
+}
+/* ---------------------- */
+
 html {
     height: 100%;
 }
